<resources>
    <string name="app_name">Nature Photos</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="Natural_Images">Natural Images</string>
    <string name="Saved_Images">Saved Images</string>
    <string name="My_Favorites">My Favourites</string>
    <string name="Share">Share</string>
    <string name="Rate">Rate</string>
    <string name="More_Apps">More Apps</string>

</resources>
